@@ -29,6 +29,7 @@ Changes in 3.3.3:
 - Make sure checks for ftello and fseeko are done, fixes a problem with large file sizes on BSD (217523)
 - Make sure reannounce timer in UDPTracker is always stopped in the stop call (219663)
 - Fix broken FilterListModel::removeFilter fixes a crash (219760)
+- Revamp adding trackers to TrackerListModel, should fix a crash (218738)
 
 Changes in 3.3.2:
 - Fix crash when loading Feed in syndication plugin at startup (216207)
